<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina5_5" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uLL-X8-5sf">
                                <rect key="frame" x="57" y="218" width="300" height="300"/>
                                <subviews>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="UserName" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LKJ-Op-GrV">
                                        <rect key="frame" x="19" y="69" width="263" height="30"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="hX2-e2-Q37"/>
                                        </constraints>
                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yPU-Dv-dQD">
                                        <rect key="frame" x="19" y="139" width="263" height="30"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="Vux-AO-yQr"/>
                                        </constraints>
                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jO3-dm-nsK">
                                        <rect key="frame" x="19" y="209" width="263" height="30"/>
                                        <color key="backgroundColor" red="0.0" green="0.25098040700000002" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="3uj-4a-f07"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                        <state key="normal" title="Login">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
                                    </button>
                                </subviews>
                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                <constraints>
                                    <constraint firstItem="jO3-dm-nsK" firstAttribute="top" secondItem="yPU-Dv-dQD" secondAttribute="bottom" constant="40" id="11s-ma-djd"/>
                                    <constraint firstItem="yPU-Dv-dQD" firstAttribute="leading" secondItem="uLL-X8-5sf" secondAttribute="leading" constant="19" id="5UD-Y2-M7F"/>
                                    <constraint firstAttribute="width" secondItem="uLL-X8-5sf" secondAttribute="height" multiplier="8:8" id="CZ4-AK-vSf"/>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="Cg9-WN-RYZ"/>
                                    <constraint firstAttribute="trailing" secondItem="LKJ-Op-GrV" secondAttribute="trailing" constant="18" id="NJX-CN-hyu"/>
                                    <constraint firstItem="yPU-Dv-dQD" firstAttribute="top" secondItem="LKJ-Op-GrV" secondAttribute="bottom" constant="40" id="NQY-V3-flg"/>
                                    <constraint firstAttribute="trailing" secondItem="jO3-dm-nsK" secondAttribute="trailing" constant="18" id="fIx-Nr-sha"/>
                                    <constraint firstItem="LKJ-Op-GrV" firstAttribute="top" secondItem="uLL-X8-5sf" secondAttribute="top" constant="69" id="lIC-fX-Vuc"/>
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="300" id="lTb-ur-tsm"/>
                                    <constraint firstItem="LKJ-Op-GrV" firstAttribute="leading" secondItem="uLL-X8-5sf" secondAttribute="leading" constant="19" id="nry-PR-zst"/>
                                    <constraint firstItem="jO3-dm-nsK" firstAttribute="leading" secondItem="uLL-X8-5sf" secondAttribute="leading" constant="19" id="rHa-Mi-OfC"/>
                                    <constraint firstAttribute="trailing" secondItem="yPU-Dv-dQD" secondAttribute="trailing" constant="18" id="zl1-Bp-Ms2"/>
                                </constraints>
                            </view>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="uLL-X8-5sf" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="JAL-nU-PP3"/>
                            <constraint firstItem="uLL-X8-5sf" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="o6y-mD-FcF"/>
                        </constraints>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-99.200000000000003" y="123.23838080959521"/>
        </scene>
        <!--Collection View Controller-->
        <scene sceneID="VyS-Ox-l4u">
            <objects>
                <collectionViewController id="JGv-mb-1Oi" sceneMemberID="viewController">
                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="6Lu-Yz-oUr">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="7rq-Es-D2p">
                            <size key="itemSize" width="50" height="50"/>
                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                        </collectionViewFlowLayout>
                        <cells>
                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="WTC-Iw-jTz">
                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                </view>
                            </collectionViewCell>
                        </cells>
                        <connections>
                            <outlet property="dataSource" destination="JGv-mb-1Oi" id="c1G-TR-gQ2"/>
                            <outlet property="delegate" destination="JGv-mb-1Oi" id="0rF-16-QEs"/>
                        </connections>
                    </collectionView>
                </collectionViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="mOk-cD-CAV" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="655" y="123"/>
        </scene>
    </scenes>
</document>
